--- a/Programa/Programa.cbp
+++ b/Programa/Programa.cbp
@@ -35,6 +35,7 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="test.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
